# process-compose

./: Cargo.toml  config.yml  config_template.yaml  readme.md  readme_zh.md
src/: config.rs  env.rs  event.rs  health.rs  logger.rs  main.rs
src/process/: manager.rs  mod.rs  pending.rs  platform.rs  status.rs
src/sys_service/: control.rs  linux_service.rs  manager.rs  mod.rs  windows_service.rs
