[package]
name = "process-compose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
service-manager = "0.6"
log = "0.4"
log4rs = "1.3"
serde_yaml = "0.9"
sysinfo = "0.30"
winapi = { version = "0.3", features = [
    "winbase",
    "consoleapi",
    "errhandlingapi",
] }
nix = { version = "0.28", features = ["signal"] }
signal-hook = "0.3"
anyhow = "1.0"
encoding = "0.2"
chrono = "0.4"
dirs = "5.0"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["blocking"] }
clap = { version = "4.5", features = ["derive"] }
[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
